feat: Add GitHub Actions CI/CD pipeline for Logic App deployment
- Created ENVIRONMENTS.md for GitHub environment configuration
- Added PIPELINE-SUMMARY.md to summarize pipeline features and setup
- Implemented SETUP-SECRETS.md for configuring GitHub secrets
- Developed deploy-infrastructure.yml for automated Logic App deployment
- Created validate-pr.yml for pull request validation and checks
- Updated README.md with project structure and pipeline details
- Enhanced .gitignore to exclude temporary and generated files

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,11 @@ yarn-error.log*
 .cache/
 dist/
 build/
+
+# GitHub Actions
+.github/workflows/test-*.yml
+whatif-output.txt
+
+# Bicep generated
+*.json
+!*.bicepparam
