--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -12,7 +12,6 @@ env:
   LOCATION: 'France Central'
 
 permissions:
-  id-token: write   # Required for OIDC authentication
   contents: read    # Required to read repository contents
   pull-requests: write  # Required to comment on PRs
 
@@ -28,12 +27,10 @@ jobs:
     - name: 📥 Checkout repository
       uses: actions/checkout@v4
 
-    - name: 🔐 Azure Login (OIDC)
+    - name: 🔐 Azure Login (Service Principal)
       uses: azure/login@v2
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: 🧪 Install Bicep CLI
       run: |
