--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,24 @@
-# Azure et déploiement
+# Azure
 .azure/
 *.log
 deployment-*.json
 
-# Secrets et configuration locale
+# Secrets
 *.env
-.env.local
 secrets.json
 local.settings.json
 
 # Fichiers temporaires
 *.tmp
-*.temp
 .temp/
 
 # Visual Studio Code
 .vscode/settings.json
-.vscode/launch.json
-.vscode/extensions.json
 
-# PowerShell
-*.ps1xml
-
-# Fichiers système Windows
+# Système
 Thumbs.db
-ehthumbs.db
 Desktop.ini
-
-# Fichiers système macOS
 .DS_Store
-.AppleDouble
-.LSOverride
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Cache et build
-.cache/
-dist/
-build/
-
-# GitHub Actions
-.github/workflows/test-*.yml
-whatif-output.txt
 
 # Bicep generated
 *.json
